--- a/Src/Pages/QcmExercicePage.ui
+++ b/Src/Pages/QcmExercicePage.ui
@@ -230,9 +230,9 @@
     </layout>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="PlayLayout" stretch="3,9">
+    <layout class="QVBoxLayout" name="PlayLayout" stretch="0,0">
      <property name="spacing">
-      <number>6</number>
+      <number>0</number>
      </property>
      <property name="sizeConstraint">
       <enum>QLayout::SetDefaultConstraint</enum>
@@ -241,12 +241,12 @@
       <number>0</number>
      </property>
      <item>
-      <layout class="QHBoxLayout" name="GuessMeContainer">
-       <property name="topMargin">
+      <layout class="QHBoxLayout" name="StemContainer">
+       <property name="spacing">
         <number>0</number>
        </property>
        <item>
-        <widget class="QLabel" name="GuessMe">
+        <widget class="QLabel" name="Stem">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
            <horstretch>0</horstretch>
